--- a/Index.html
+++ b/Index.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Charlie's Website</title>
+    <link href="styles.css" rel="stylesheet" />
 </head>
+
 <body>
-    <h1>Home</h1>
-    <h2>I am the creator of the website, Charlie Zhou.</h2>
-     <h2> Here are some websites you can use.</h2>  
-        <a href="https://sso.prodigygame.com/premises">Prodigygame</a><br>
-        <a href="https://www.youtube.com/">Youtube</a> <br>
-        <img src="https://i.ibb.co/sv7VdWWm/Piercing-Clothesline.webp" alt="Blox Fruit Dough C Move: Piercing Clothsline.">
+    
+    <img
+        src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/0/0b/Block_of_Emerald_JE4_BE3.png/revision/latest?cb=20200226013452">
+    <img src="https://minecraft.wiki/images/Block_of_Gold_JE6_BE3.png?09478">
+    <img src="https://minecraft.wiki/images/Block_of_Diamond_JE5_BE3.png?542ee">
+    <img src="https://minecraft.wiki/images/Block_of_Amethyst_JE3_BE1.png?14501">
+    <h1>HOME</h1>
+    <div class="pigs">
+        <img
+            src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/0/03/PigFace.png/revision/latest?cb=20190804021457">
+        <img
+            src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/0/03/PigFace.png/revision/latest?cb=20190804021457">
+    </div>
+    <h2>Minecraft Blocks</h2>
+    <p>This website specifies in explaining a lot of Minecraft blocks! Link below to enter the websites.</p>
+    <a href="file.html" target="_blank">Minecraft Ores</a>
 </body>
 </html>
