--- a/file.html
+++ b/file.html
@@ -9,33 +9,33 @@
 <body>
     <div class="ores">
     <p>Ancient Debris</p>
-    <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/4/4c/Ancient_Debris_JE1_BE1.png/revision/latest?cb=20200216200020">
+    <img src="https://minecraft.wiki/images/Ancient_Debris_JE1_BE1.png?571c1">
     <p>Coal</p>
-    <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/4/48/Coal_Ore_JE5_BE4.png/revision/latest?cb=20210325235945">
+    <img src="https://minecraft.wiki/images/Coal_Ore_JE5_BE4.png?73bee">
     <p>Copper</p>
-    <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/f/fd/Copper_Ore_JE2_BE2.png/revision/latest?cb=20210610152415">
+    <img src="https://minecraft.wiki/images/Copper_Ore_JE2_BE2.png?073cd">
 </div>
 <div class= ores2>
     <p>Diamond</p>
-    <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/2/29/Diamond_Ore_JE5_BE5.png/revision/latest?cb=20210326000237">
+    <img src="https://minecraft.wiki/images/Diamond_Ore_JE5_BE5.png?fa2f4">
     <p>Emerald</p>
-    <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/a/a9/Emerald_Ore_JE4_BE3.png/revision/latest?cb=20210225021326">
+    <img src="https://minecraft.wiki/images/Emerald_Ore_JE4_BE3.png?02ea7">
     <p>Gold</p>
-    <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/1/18/Gold_Ore_JE7_BE4.png/revision/latest?cb=20210414170925">
+    <img src="https://minecraft.wiki/images/Gold_Ore_JE7_BE4.png?9817a">
 </div>
 <div class="ores3">
     <p>Iron</p>
-    <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/1/19/Iron_Ore_JE6_BE4.png/revision/latest?cb=20210326000111">
+    <img src="https://minecraft.wiki/images/Iron_Ore_JE6_BE4.png?b1fb3">
     <p>Lapis Lazuli</p>
-    <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/e/ea/Lapis_Lazuli_Ore_JE4_BE4.png/revision/latest?cb=20210414171130">
+    <img src="https://minecraft.wiki/images/Lapis_Lazuli_Ore_JE4_BE4.png?73194">
     <p>Nether Gold</p>
-    <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/6/62/Nether_Gold_Ore_JE2_BE1.png/revision/latest?cb=20200325183251">
+    <img src="https://minecraft.wiki/images/Nether_Gold_Ore_JE2_BE1.png?c7842">
 </div>
 <div class="ores4">
     <p>Nether Quartz</p>
-    <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/2/28/Nether_Quartz_Ore_JE3_BE2.png/revision/latest?cb=20230811071028">
+    <img src="https://minecraft.wiki/images/Nether_Quartz_Ore_JE3_BE2.png?f3464">
     <p>Redstone</p>
-    <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/c/cd/Redstone_Ore_JE4_BE3.png/revision/latest?cb=20210226103025">
+    <img src="https://minecraft.wiki/images/Redstone_Ore_JE4_BE3.png?25b81">
 </div>
 </body>
 </html>
