--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 
 <body>
     
-    <img
-        src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/0/0b/Block_of_Emerald_JE4_BE3.png/revision/latest?cb=20200226013452">
+    <img src="https://minecraft.wiki/images/Block_of_Emerald_JE4_BE3.png?d5a3c">
     <img src="https://minecraft.wiki/images/Block_of_Gold_JE6_BE3.png?09478">
     <img src="https://minecraft.wiki/images/Block_of_Diamond_JE5_BE3.png?542ee">
     <img src="https://minecraft.wiki/images/Block_of_Amethyst_JE3_BE1.png?14501">
     <h1>HOME</h1>
     <div class="pigs">
         <img
-            src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/0/03/PigFace.png/revision/latest?cb=20190804021457">
+            src="https://minecraft.wiki/images/PigFace.png?ffe16">
         <img
-            src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/0/03/PigFace.png/revision/latest?cb=20190804021457">
-    </div>
+            src="https://minecraft.wiki/images/PigFace.png?ffe16">
+            </div>
     <h2>Minecraft Blocks</h2>
     <p>This website specifies in explaining a lot of Minecraft blocks! Link below to enter the websites.</p>
     <a href="file.html" target="_blank">Minecraft Ores</a>
+    <a href="animation\index.html">MY cool animation</a>
 </body>
 </html>
