--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     <h2>Minecraft Blocks</h2>
     <p>This website specifies in explaining a lot of Minecraft blocks! Link below to enter the websites.</p>
     <a href="file.html" target="_blank">Minecraft Ores</a>
-    <a href="animation\index.html">MY cool animation</a>
+    <a href="animation\index.html">Crimson Warped Forest</a>
 </body>
 </html>
