--- a/index.html
+++ b/index.html
@@ -25,5 +25,7 @@
     <p>This website specifies in explaining a lot of Minecraft blocks! Link below to enter the websites.</p>
     <a href="file.html" target="_blank">Minecraft Ores</a>
     <a href="animation\index.html">Crimson Warped Forest</a>
+    <a href="ore.html" target="_blank">All Hostile Mobs in Minecraft</a>
+    <a href="game.html" target="_blank">A Game I Made</a>
 </body>
 </html>
